--- a/Hamlib/Makefile
+++ b/Hamlib/Makefile
@@ -5,18 +5,11 @@ LDFLAGS = -lGL -lGLU -lglut -lGLEW -lglfw -lm -lpthread
 SERVER_LDFLAGS = -lm -lpthread -lglfw
 
 OBJ = Hrend.o Hinput.o Hcam.o Hnav.o Hfio.o Hgui.o Hutil.o Hshade.o Hauto.o
-SERVER_OBJ = Hauto.o Hutil.o PerlinNoise.o server.o
 
-all: prog
-
-server: $(SERVER_OBJ)
-	$(CC) -w $(CFLAGS) -o server $(SERVER_OBJ) $(SERVER_LDFLAGS)
-
-prog: $(OBJ)
-	$(CC) -c -w $(CFLAGS) -o hamlib $(OBJ) $(LDFLAGS)
+all: $(OBJ)
 
 %.o: %.c
 	$(CC) -w $(CFLAGS) -c $<
 
 clean:
-	rm -rf *.o hamlib prog server
+	rm -rf *.o
